--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="box">
@@ -15,6 +15,6 @@
         <div class="">Your degree will appear here</div>
 
     </div>
-    <img src="images/8db67f8fa0d4c6c3f8a86a95e7d69d95.jpeg" alt="">
+    <img src="./images/8db67f8fa0d4c6c3f8a86a95e7d69d95.jpeg" alt="">
 </body>
 </html>
